* Flushing internal and micrometer metrics before the agent shuts down - {pull}1658[#1658]
* Overhaul of the <<setup-attach-cli,attacher cli>> application that allows to attach the agent to running JVMS
** The artifact of the standalone cli applicaiton is now called `apm-agent-attach-cli`. The attacher API is still called `apm-agent-attach`.
** Improved logging +
   The application uses {ecs-logging-java-ref}/intro.html[Java ECS logging] to emit JSON logs.
   The log level can be configured with the `--log-level` option.
   By default, the program is logging to the console but using the `--log-file` option, it can also log to a file.
** Attach to JVMs running under a different user (unix only) +
   The JVM requires the attacher to be running under the same user as the target VM (the attachee).
   The `apm-agent-attach-standalone.jar` can now be run with a user that has permissions to switch to the user that runs the target VM.
   On Windows, the attacher can still only attach to JVMs that are running with under the same user.
** New include/exclude discovery rules +
*** `--include-all`: Attach to all discovered JVMs. If no matchers are provided, it will not attach to any JVMs.
*** `--include-user`/`--exclude-user`: Attach to all JVMs of a given operating system user.
*** `--include-main`/`--exclude-main`: Attach to all JVMs that whose main class/jar name, or system properties match the provided regex.
*** `--include-vmargs`/`--exclude-vmargs`: Attach to all JVMs that whose main class/jar name, or system properties match the provided regex.
*** `--pid` is deprecated in favor of `--include-pid`
** Removal of options +
*** The deprecated `--arg` option has been removed.
*** The `-i`/`--include`, `-e`/`exclude` options have been removed in favor of the `--<include|exclude>-<main|vmargs>` options.
*** The `-p`/`--pid` options have been removed in favor of the `--include-pid` option.
** Changed behavior of  the `-l`/`--list` option +