@@ -32,6 +32,8 @@ endif::[]
 * Flushing internal and micrometer metrics before the agent shuts down - {pull}1658[#1658]
 * Overhaul of the <<setup-attach-cli,attacher cli>> application that allows to attach the agent to running JVMS
 ** The artifact of the standalone cli applicaiton is now called `apm-agent-attach-cli`. The attacher API is still called `apm-agent-attach`.
+** There is also a slim version of the cli application that does not bundle the Java agent.
+   It requires the `--agent-jar` option to be set.
 ** Improved logging +
    The application uses {ecs-logging-java-ref}/intro.html[Java ECS logging] to emit JSON logs.
    The log level can be configured with the `--log-level` option.
